--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsappnode",
+  "name": "whatspup",
   "version": "1.0.0",
   "description": "An application to use whatsapp via cli",
   "main": "chat.js",
