--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Sarfraz Ahmed",
   "license": "MIT",
   "dependencies": {
+    "boxen": "^1.3.0",
+    "gradient-string": "^1.0.0",
+    "log-symbols": "^2.1.0",
     "node-notifier": "^5.1.2",
     "puppeteer": "^0.13.0",
     "winston": "^2.4.0"
