--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "boxen": "^1.3.0",
+    "chalk": "^2.3.0",
     "gradient-string": "^1.0.0",
     "log-symbols": "^2.1.0",
     "node-notifier": "^5.1.2",
