--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Sarfraz Ahmed",
   "license": "MIT",
   "dependencies": {
+    "ansi-escapes": "^3.0.0",
     "boxen": "^1.3.0",
     "chalk": "^2.3.0",
     "gradient-string": "^1.0.0",
